# sentinel

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
api-gateway/: Dockerfile  pom.xml
api-gateway/src/main/java/io/sentinel/gateway/: SentinelGatewayApplication.java
api-gateway/src/main/resources/: application.yml
api-gateway/src/main/resources/db/migration/: V1__create_users_table.sql  V2__create_domains_table.sql  V3__create_scans_table.sql  V4__create_findings_table.sql  V5__findings_idempotency_constraint.sql  V6__add_completed_jobs_to_scans.sql
docs/: Untitled
docs/adr/: 0001-microservices-architecture.md  0002-rabbitmq-selection.md  0003-domain-verification.md
frontend/: Dockerfile  proxy.ts
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/domains/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/scans/[id]/: page.tsx
frontend/lib/: api.ts
scanner-core/: pyproject.toml
scanner-core/sentinel_core/: __init__.py  finding.py  health.py  owasp.py  queue_config.py  rate_limiter.py  scan_reporter.py  scanner_base.py  worker_base.py
scanners/osint/: Dockerfile  main.py  requirements.txt  scanner.py
scanners/sqli/: Dockerfile  main.py  payloads.py  requirements.txt  scanner.py
scanners/tests/: requirements.txt  test_tls_scanner.py  test_xss_scanner.py
scanners/tls/: Dockerfile  main.py  requirements.txt  scanner.py
scanners/xss/: Dockerfile  main.py  requirements.txt  scanner.py
(+19 files in other folders)
