[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-core"
version = "0.1.0"
description = "Shared models and base classes for Sentinel scanner workers"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "pika>=1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel_core*"]
